# MAI-OOP-COURSE

./: README.md
Figures-Classes/: CMakeLists.txt  README.md  main.cpp
Figures-Classes-Templates/: CMakeLists.txt  main.cpp
Figures-Classes-Templates/include/: figure.hpp  figure_array.hpp  pentagon.hpp  point.hpp  rhombus.hpp  trapezoid.hpp
Figures-Classes-Templates/src/: figure.cpp  figure_array.cpp  pentagon.cpp  rhombus.cpp  trapezoid.cpp
Figures-Classes-Templates/tests/: tests.cpp
Figures-Classes/.devcontainer/: devcontainer.json
Figures-Classes/include/: triangle.hpp
Figures-Classes/src/: figure.cpp  square.cpp
Figures-Classes/tests/: tests.cpp
Forward-List-on-Map/: CMakeLists.txt  README.md  main.cpp
Forward-List-on-Map/.devcontainer/: devcontainer.json
Forward-List-on-Map/include/: forward_list.hpp  memory_resource.hpp
Forward-List-on-Map/tests/: tests.cpp
GCD/: .gitignore  CMakeLists.txt  README.md  main.cpp
GCD/.devcontainer/: Dockerfile  devcontainer.json
GCD/include/: GCD.hpp
GCD/src/: GCD.cpp
GCD/tests/: test01.cpp
HEX-Class/: CMakeLists.txt  main.cpp
HEX-Class/.devcontainer/: devcontainer.json
HEX-Class/tests/: tests.cpp
include/: Hex.h  Hex.hpp  figure.hpp  figure_array.hpp  octagon.hpp  point.hpp  square.hpp
src/: Hex.cpp  figure_array.cpp  octagon.cpp  triangle.cpp
